added some styling anddelete button

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+.shopping-cart button {
+	display: flex;
+	flex-wrap: wrap;
+	width: 200px;
+	padding: 5px;
+}
+.shopping-list button:nth-child(even) {
+	color: red;
+}
+.shopping-list button:nth-child(odd) {
+	color: green;
+}
+.shopping-list button {
+	display: flex;
+	flex-wrap: wrap;
+	width: 200px;
+	padding: 5px;
+}
+
+.shopping-cart button:nth-child(even) {
+	color: green;
+}
+.shopping-cart button:nth-child(odd) {
+	color: red;
 }
