--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
 	text-align: center;
+	display: flex;
+	flex-wrap: wrap;
+	widows: 300px;
+	border-style: solid;
+	border-color: lightslategrey;
+	padding: 20px;
+	margin: 10px;
+	width: 250px;
 }
 
 .App-logo {
